# speakcode

./: .gitignore  LICENSE  README.md  pyproject.toml
voice_coding/: __init__.py  clipboard.py  init_cmd.py  learn_cmd.py  main.py  memory.py  postprocessor.py  recorder.py  transcriber.py
